# Rusty-Girlfriend

./: .gitignore  Cargo.toml  README.md
Scripts/: launch.sh
backend/: Cargo.toml
backend/src/: api_req.rs  chat_response.rs  db_endpoint.rs  db_functions.rs  db_req.rs  main.rs  serve_frontend.rs  types.rs
frontend/: Cargo.toml  index.html  style.css
frontend/src/: chat_container.rs  chat_menu.rs  http_req.rs  input_bar.rs  lib.rs  main.rs  main_app.rs  state_hooks.rs  types.rs
