[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Rocket framework with JSON support
rocket = { version = "0.5.1", features = ["json"] }

# Serde for serializing/deserializing JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Reqwest for making async HTTP requests
reqwest = { version = "0.11", features = ["json"] }

# Tokio runtime (multi-threaded) for async support
tokio = { version = "1.28", features = ["macros", "rt-multi-thread", "time"] }
