[package]
name = "frontend"
version = "0.1.0"
edition = "2024"


[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo = "0.6"         # For HTTP requests & timers


wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement", "EventTarget"] }
js-sys = "0.3.70"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
